ETSL-1056 Header 3 and 6 tiles alignment fixes

--- a/ui.frontend/src/main/webpack/global/styles/components/header/mega-navigation.scss
+++ b/ui.frontend/src/main/webpack/global/styles/components/header/mega-navigation.scss
@@ -1984,7 +1984,7 @@
 
       .tiles-wrapper {
         .tile {
-          margin-left: toRem(16);
+          margin: 0 toRem(8);
           flex-grow: 1;
         }
       }
@@ -2007,11 +2007,11 @@
       }
 
       .menu-promotion-wrapper {    
-        margin: toRem(32) 0;
-        padding-right: toRem(32);
+        margin: toRem(32) 0 0;
+        padding-right: 0;
 
         .tiles-wrapper {
-          justify-content: right;
+          justify-content: center;
         }
       }
 
@@ -2055,20 +2055,23 @@
       }
 
       .tiles-wrapper {
-        margin: toRem(24);
+        margin: toRem(24) 0 0;
         flex-basis: 100%;
         flex-wrap: wrap;
+        height: auto;
         justify-content: left;
-        padding-left: toRem(48);
+        padding-left: 0;
 
         .tile {
+          display: flex;
+          flex-direction: column;
+          margin: 0 toRem(18) toRem(18);
           margin-right: toRem(16);
           width: toRem(110);
-          height: toRem(140);
+          height: auto;
 
           @include respond-to-min($desktop-large) {
             width: toRem(152);
-            height: toRem(120);
           }
 
           .cover {
